fixed overflow on cards, changed intro text

--- a/style.css
+++ b/style.css
@@ -426,7 +426,8 @@ button:hover {
     animation: fadeOut 500ms;
 }
 
-.card:hover .content {
+.card:focus, 
+.card:hover  .content {
     animation: fadeIn 500ms;
     opacity: 1;
 }
